<resources>
    <string name="app_name">Gestion Centres</string>
    <string name="welcome">BienVenue</string>
    <string name="signuptitle">Create account </string>
    <string name="name" >Nom Assouciation</string>
    <string name="code" >code Assouciation</string>
    <string name="email">Email Assouciation</string>
    <string name="email1">Email Address</string>
    <string name="password">Mot de Passe</string>
    <string name="repassword">Confirmation</string>
    <string name="recep_text">Récupération de Compte</string>
    <string name="txt1">Enter votre E-mail: </string>
    <string name="verification">Verification</string>
    <string name="verification_txt">Enter le code de Verification</string>
    <string name="text_verify">si vous n’avez pas reçu de code </string>
    <string name="resend">Renvoyer</string>
    <string name="reg1">Sign in</string>
    <string name="signintitle">Sign in to your account</string>
    <string name="reg">Create</string>
    <string name="create"><u>Create</u></string>
    <string name="solo">Welcome</string>
    <string name="solm">Tiznit</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="centre">Les centre</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>

</resources>
