<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3">


    <TextView
        android:id="@+id/signintitle"
        android:layout_width="283dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/signintitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="283dp"
        android:layout_height="58dp"
        android:layout_below="@id/signintitle"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/textview_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="13dp"
        android:textCursorDrawable="@color/black"
        android:textColor="@color/white"
        android:textColorHint="#CCC4C2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="283dp"
        android:layout_height="58dp"
        android:layout_below="@id/email1"
        android:layout_centerInParent="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/textview_border"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textCursorDrawable="@color/black"
        android:textColor="@color/white"
        android:textColorHint="#CCC4C2" />


    <TextView
        android:id="@+id/txt"
        android:layout_width="113dp"
        android:layout_height="68dp"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="24dp"
        android:text="@string/reg1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetText"
        android:layout_width="204dp"
        android:layout_height="57dp"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="177dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="20dp"
        android:text="Forget your password?"
        android:textColor="#8A8383"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="300dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/textborder"
        android:backgroundTint="@color/black"
        android:drawableTop="@drawable/ic_baseline_arrow_forward_24"
        android:drawableTint="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_marginStart="67dp"
        android:layout_marginTop="171dp"
        android:layout_marginBottom="20dp"
        android:text="Don't have an account?"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="232dp"
        android:layout_marginTop="171dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />


</RelativeLayout>