<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back8">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

    </LinearLayout>

    <TextView
        android:id="@+id/recep_text"
        android:layout_width="261dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/recep_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="234dp"
        android:layout_height="55dp"
        android:layout_below="@id/recep_text"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/txt1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/email1"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_below="@id/txt1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/textview_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email1"
        android:padding="13dp"
        android:textColor="@color/white"
        android:textColorHint="#CCC4C2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/B1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/email1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/textborder"
        android:backgroundTint="#FF9E43"
        android:fontFamily="@font/acme"
        android:text="Suivant">

    </androidx.appcompat.widget.AppCompatButton>





</RelativeLayout>