<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/back8">


    <TextView
        android:id="@+id/verification"
        android:layout_width="261dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/verification"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/verification_txt"
        android:layout_width="2300dp"
        android:layout_height="80dp"
        android:layout_below="@id/verification"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/verification_txt"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linear_"
        android:layout_width="341dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="2dp"
        android:gravity="center">

        <EditText
            android:id="@+id/input1"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
             />

        <EditText
            android:id="@+id/input2"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/input3"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/input4"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/backgroundbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
             />


    </LinearLayout>

    <TextView
        android:id="@+id/text_verify"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_below="@id/linear_"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:text="@string/text_verify"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/text_verify1"
        android:layout_width="124dp"
        android:layout_height="59dp"
        android:layout_below="@id/linear_"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="275dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:elegantTextHeight="true"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/resend"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/B1tn0"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/text_verify"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/textborder"
        android:backgroundTint="#FF9E43"
        android:text="Verifier">

    </androidx.appcompat.widget.AppCompatButton>


</RelativeLayout>